--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -1,14 +1,23 @@
 .header-main {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    overflow: hidden;
+    background-color: #222;
+    color: white !important;
+    z-index: 1100;
+    
     display: flex;
     justify-content: space-between;
 
-    //margin: 0.5rem 0 0 0;
-    padding: 0.5rem 0.5rem  0.5rem 1rem;
+    
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
     border-bottom: 1px red solid;
     height: 5rem;
-    
+
     &___left {
-        padding: 0.3rem 0 0.2rem 0; 
+        padding: 0.3rem 0 0.2rem 0;
         display: flex;
         justify-content: flex-start;
 
@@ -16,7 +25,7 @@
             margin-right: 1rem;
             align-self: center;
         }
-        &--logo-name{
+        &--logo-name {
             font-size: 1.5rem;
             align-self: center;
         }
@@ -35,20 +44,16 @@
         }
 
         &--avatar {
-
             > Button {
                 border-radius: 100%;
                 width: 1.5rem !important;
             }
 
-
-
             img {
                 border-radius: 100%;
                 width: 2.5rem;
                 height: auto;
-            }   
+            }
         }
     }
 }
-
