--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -1,28 +1,42 @@
 .avt-profile {
     position: relative;
     width: 85%;
-    padding-top: 100%; 
+    padding-top: 100%;
     margin-bottom: auto;
     text-align: center;
 
     padding: 0;
     margin-top: 1rem;
     border-radius: 100%;
-    > IconButon {
-        padding: 0 !important;
-        &:hover {
-            padding:0;
-        }
-    }
-    &--image {
-        width: 100%;
-        height: auto;
+
+    > Button {
+        width: 8.5rem;
+        height: 8.5rem;
+        border-radius: 50%;;
     }
 
+    &--image {
+        width: 8.5rem;
+        height: 8.5rem;
+        border-radius: 100%;;
+    }
+
+    .cicular {
+        display: inline-block;
+        border-radius: 50%;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
     &--icon-upload {
         position: absolute;
         bottom: 0;
         right: 10%;
         font-size: 2rem !important;
     }
+}
+
+.name-input {
+    display: flex;
+    justify-content: space-between;
 }
