--- a/client/src/containers/Feed/index.scss
+++ b/client/src/containers/Feed/index.scss
@@ -191,8 +191,9 @@
                     }
                     &--copy-code {
                         margin-bottom: 1rem;
+                        padding-top: 0.7rem;
                         > Button {
-                            color: black !important;
+                           
                             border-radius: 0% !important;
                         }
                     }
