Add Feature: Update course info.

--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -52,7 +52,7 @@
             img {
                 border-radius: 100%;
                 width: 2.5rem;
-                height: auto;
+                height: 2.5rem;
             }
         }
     }
