--- a/client/src/containers/DashBoard/index.scss
+++ b/client/src/containers/DashBoard/index.scss
@@ -47,11 +47,14 @@
                 position: absolute;
 
                 width: 5.5rem;
+               
                 right: 1rem;
-                bottom: -3rem;
+                bottom: -3.5rem;
 
                 > img {
-                    width: 5rem;
+                    width: 5.5rem;
+                    height: 5.5rem;
+                    border-radius: 100%;
                 }
             }
         }
