--- a/client/src/components/Post/index.scss
+++ b/client/src/components/Post/index.scss
@@ -2,4 +2,9 @@
     margin-top: 2rem;
     width: 100%;
 
+    &___content {
+        padding: 0rem 1.5rem 0.5rem 1.5rem;
+    }
 }
+
+.hide-toolbar { display:none !important; }
