--- a/client/src/components/Post/index.scss
+++ b/client/src/components/Post/index.scss
@@ -3,7 +3,11 @@
     width: 100%;
 
     &___content {
+        margin-top: -1.2rem;
         padding: 0rem 1.5rem 0.5rem 1.5rem;
+    }
+    &___header {
+        padding: 1.2rem;
     }
 }
 
