Add new feature: create new exercise.

--- a/client/src/components/AddExercise/index.scss
+++ b/client/src/components/AddExercise/index.scss
@@ -11,4 +11,11 @@
             padding: 0.2rem;
         }
     }
+
+    &___dropdown {
+        &--option {
+            padding: 1rem !important;
+            margin: 1rem;
+        }
+    }
 }
