--- a/client/src/containers/Exercise/index.scss
+++ b/client/src/containers/Exercise/index.scss
@@ -3,8 +3,12 @@
 
     margin: 2rem auto;
 
+    &___topic {
+        &--click {
+            font-weight: bold !important;
+        }
+    }
     &___exam {
-
         &--create {
             font-size: 1rem !important;
             //padding: 0.4rem;
@@ -21,7 +25,6 @@
                 display: flex;
             }
 
-         
             &--icon {
                 align-items: center;
                 height: auto !important;
