--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,3 +9,9 @@ html, body, #root {
   
   height: 100%
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
