--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -42,7 +42,6 @@
             height: 2rem;
         }
 
-
         &--avatar {
             > Button {
                 border-radius: 100%;
@@ -55,5 +54,60 @@
                 height: 2.5rem;
             }
         }
+    }
+}
+
+.info-header {
+    display: flex;
+}
+
+.notification {
+    height: 3rem;
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+
+    &___none {
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        align-items: center;
+
+        font-style: italic;
+        height: 4rem;
+    }
+
+    &___avatar {
+        > Avatar {
+            font-size: 1.5rem;
+        }
+    }
+    &___content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        flex: 1;
+        text-align: left;
+        padding-left: 0.3rem;
+        &--title {
+            font-size: 0.9rem;
+            font-weight: bold;
+        }
+        &--description {
+            width: 14rem;
+            flex: 1;
+            font-size: 0.8rem;
+            display: inline-block;
+
+            //display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+    &___action {
+        opacity: 0.9;
+        font-style: italic;
     }
 }
