--- a/client/src/pages/Authenticate/index.scss
+++ b/client/src/pages/Authenticate/index.scss
@@ -55,15 +55,12 @@
         margin-bottom: 1rem;
         text-align: center;
 
-        .authen-text {
-            font-weight: bold;
-            cursor: pointer;
-            color: rgb(165, 0, 0);
-        }
+    }
 
-        .authen-text:hover {
-            opacity: 0.5;
-        }
+    &___forgot-password {
+        display: flex;
+        justify-content: flex-end;  
+        margin-right: 1.5rem;
     }
 }
 
@@ -79,4 +76,16 @@
     position: absolute;
     top: 5%;
     right: 10%;
+}
+
+
+
+.authen-text {
+    font-weight: bold;
+    cursor: pointer;
+    color: rgb(165, 0, 0);
+}
+
+.authen-text:hover {
+    opacity: 0.5;
 }
