Add and complete features: comment grade review and notify for teacher.

--- a/client/src/containers/PostDetail/index.scss
+++ b/client/src/containers/PostDetail/index.scss
@@ -8,6 +8,13 @@
     &___title {
         color: blue;
     }
+
+    &___submission-comment {
+        max-height: 15rem;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        overflow-y: scroll;
+    }
 }
 
 
