--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,3 +15,22 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  /* background: #ffffff; */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(192, 192, 192);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(192, 192, 192);
+  border-radius: 10px;
+}
